--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,13 @@
-.App {
-  text-align: center;
+
+
+html {
+  position: relative;
+  min-height: 100%;
+  background-color: rgb(215, 55, 180);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+body {
+  margin: 0 0 100px; /* bottom = footer height */
+  padding: 25px;
+  
 }
