--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .app {
   height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: column
 }
 
 .panel-container {
   display: flex;
   flex-grow: 1;
+  color: #0000ff
+  
 }
+
