--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -3,5 +3,5 @@
   border-right: 0.1px rgb(218, 255, 243) solid;
   padding: 20px;
   overflow-y: auto;
-  background-color: rgb(255, 123, 246);
+  background-color: #f6989d
 }
