--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -1,6 +1,6 @@
 .panel {
   flex: 1;
-  border-right: 0.1px rgb(218, 255, 243) solid;
+  border-right: 0.1px #959596 solid;
   padding: 20px;
   overflow-y: auto;
   background-color: #f6989d
