--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .app {
   height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column
 }
@@ -8,13 +9,9 @@
   display: flex;
   flex-grow: 1;
   color: #0000ff
-  
 }
 
 .footer {
   display: flex;
   border-right: 0.1px rgb(218, 255, 243) solid;
-  
-  
-
 }
