--- a/src/components/MusicPlayer/MusicPlayer.css
+++ b/src/components/MusicPlayer/MusicPlayer.css
@@ -6,7 +6,7 @@
 }
 
 
-.controls > a {
+.controls {
   float: left;
   margin:4px;
   cursor: pointer;
@@ -15,7 +15,7 @@
 
   
 }
-.controls > a:hover {
+.controls:hover {
   background-color: #f60000;
   color: #000000;
 }
