--- a/src/components/Footer/LanguageTranslator/LanguageTranslator.css
+++ b/src/components/Footer/LanguageTranslator/LanguageTranslator.css
@@ -1,7 +1,10 @@
 .language-toggle {
-  align-content: flex-end;
-  float:right;
-  margin:4px;
+  justify-content: flex-end;
+  display: flex;
+  flex-direction: row;
+  margin: 4px;
   margin-block-start: 5px;
-  color: #959596; 
+  color: black;
+  width: 100%;
+  background-color: #f6989d;
 }
