--- a/src/components/Footer/AudioPlayer/NowPlaying/NowPlaying.css
+++ b/src/components/Footer/AudioPlayer/NowPlaying/NowPlaying.css
@@ -1,7 +1,3 @@
-.now-playing{   
-  width: 100%;
-  margin: 4px;
-  margin-block-start: 5px;
-  color: black; 
-  background-color: #f6989d;
+.now-playing{ 
+  color:blue;
 }
