--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,22 @@
   display: flex;
   border-right: 0.1px rgb(218, 255, 243) solid;
 }
+
+@media screen  and (max-width:600px) {
+  .app {
+    height: 100%;
+    width: 100%;    
+  }
+
+.panel-container {
+  flex-direction: column;
+}
+
+.panel {
+  min-height: 667px;
+}
+
+.footer {
+  height: 130px;
+}  
+}
