--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer {
   display: flex;
   border: 2px solid #959596;
+  border-right: 0.1px rgb(218, 255, 243) solid;
   width: 100%;
   background-color: #f6989d;
 }
