--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
     flex-direction: column;
   }
 
-  .panel-keyword-list, .panel-show-list, .panel-espiode-list, .panel-episode {
+  .panel{
     min-height: 100vh;
   }
 
