--- a/src/components/Footer/AudioPlayer/ProgressBar/ProgressBar.css
+++ b/src/components/Footer/AudioPlayer/ProgressBar/ProgressBar.css
@@ -1,14 +1,4 @@
-#timeline{
-  width: 400px;
-  height: 20px;
+#progress{
   border-radius: 15px;
   background: rgba(0,0,0,.3);
-}
-
-#handle{
-width: 18px;
-height: 18px;
-border-radius: 50%;
-margin-top: 1px;
-background: rgba(0, 0, 0,1);
 }
