--- a/src/components/Footer/LanguageToggler/LanguageToggler.css
+++ b/src/components/Footer/LanguageToggler/LanguageToggler.css
@@ -1,12 +1,5 @@
 .language-toggle {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  height: 25px;
-  padding-top: 5px;
-  margin: 4px;
-  color: black;
-  width: 75px;
+  margin: 0px 10px;
 }
 
 .language-toggle-slash {
@@ -16,4 +9,10 @@
 .language-selected {
   text-decoration: underline;
   font-weight: 800;
+}
+
+@media screen and (max-width: 750px) {
+  .language-toggle {
+    font-size: 0.75em;
+  }
 }
