--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -1,6 +1,7 @@
  .panel { 
   flex: 1;
   border-right: 0.1px #959596 solid;
+  height: 100%;
   padding: 20px;
   overflow-y: auto;
   background-color: #f6989d;
