removed-unnecessary-css-properties/fixed-2X2-screen

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .app {
     height: 100%;
     width: 100%;
@@ -34,23 +34,16 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .panel-container {
-    min-height: 100%;
-    display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
   }
 
   .panel-container > div {
-    display: flex;
     flex-basis: calc(50% - 40px);
-    justify-content: center;
-    flex-direction: column;
   }
 
   .panel-container > div > div {
     display: flex;
-    justify-content: center;
-    flex-direction: row;
+    justify-content: center;  
   }
 
   .footer {
@@ -58,8 +51,9 @@
     position: fixed;
     bottom: 0px;
   }
-  
+
   .panel {
-    border-bottom: 0.1px #959596 solid;
+    border-bottom: 1px #959596 solid;
+    height: 50%;
   }
 }
