--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,3 +7,18 @@
   height: 40px;
   background-color: #f6989d;
 }
+
+@media screen and (max-width: 767px) {
+  .footer {
+    height: 40px;
+    position: fixed;
+    bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .footer {
+    height: 40px;
+    bottom: 0px;
+  }
+}
