--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -7,3 +7,15 @@
   background-color: #f6989d;
 }
 
+@media screen and (max-width: 767px) {
+  .panel {
+    min-height: 100vh;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .panel {
+    border-bottom: 1px #959596 solid;
+    height: 50%;
+  }
+}
