add footer to fixed bottom  positon in mobile view / delete unesseary media queury in footer.css

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,11 +11,6 @@
 @media screen and (max-width: 767px) {
   .footer {
     bottom: 0px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .footer {
-    bottom: 0px;
+    position: fixed;
   }
 }
