--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -5,6 +5,7 @@
   padding: 20px;
   overflow-y: auto;
   background-color: #f6989d;
+  text-align: right;
 }
 
 @media screen and (max-width: 767px) {
