--- a/src/components/EpisodeList/EpisodeList.css
+++ b/src/components/EpisodeList/EpisodeList.css
@@ -1,13 +1,27 @@
 .show-name {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  font-size: 1.5em;
 }
 
 .show-description {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .show-keywords {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  line-height: 1.8em;
+}
+
+.show-keyword {
+  margin-top: 5px;
+  margin-left: 8px;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.episodes-label {
+  margin-bottom: 15px;
 }
 
 .episode-list-link {
