changes for demo

--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -2,7 +2,7 @@
   flex: 1;
   border-right: 0.1px #959596 solid;
   height: 100%;
-  padding: 20px;
+  padding: 100px 20px;
   overflow-y: auto;
   background-color: #f6989d;
   text-align: right;
