--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,7 @@
 .footer {
   display: flex;
   align-items: center;
-  border: 2px solid #959596;
-  border-right: 0.1px rgb(218, 255, 243) solid;
+  border-right: 2px solid #959596;
   width: 100%;
   height: 40px;
   background-color: #f6989d;
