--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -11,7 +11,7 @@
   width: 100%;
   padding: 0 0 0 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .nav-item {
