--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,10 @@
 .app {
   height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
 }
 
 .panel-container {
   display: flex;
-  flex-grow: 1;
   height: 100%;
 }
 
@@ -34,5 +31,9 @@
 
   .panel-container > div > div {
     text-align: center;
+  }
+
+  .panel {
+    padding-bottom: 40px;
   }
 }
