--- a/src/components/Footer/AudioPlayer/NowPlaying/NowPlaying.css
+++ b/src/components/Footer/AudioPlayer/NowPlaying/NowPlaying.css
@@ -1,5 +1,6 @@
-.now-playing{ 
+.now-playing { 
   color: white;
   font-size: 0.85em;
-  margin-right: 20px;
+  margin-right: 10px;
+  padding: 6px;
 }
